unpackaged/main/default/objects/Contact/fields/Advertising_Owner__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Owner__c</fullName>
    <label>Advertising Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>