unpackaged/main/default/objects/Contact/fields/Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process__c</fullName>
    <inlineHelpText>What is the process for (or how do your or your group go about) registering for professional memberships and subscriptions?</inlineHelpText>
    <label>Approval Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Approval Process</fullName>
            </value>
            <value>
                <fullName>Approval Process - Immediate</fullName>
            </value>
            <value>
                <fullName>Approval Process - Less than 1 month</fullName>
            </value>
            <value>
                <fullName>Approval Process - More than 1 month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>