unpackaged/main/default/objects/Contact/fields/Areas_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Interest__c</fullName>
    <description>Topic areas initially selected by new registrant / trialist, then augmented by visitor behavior (i.e. article visited). Used to drive marketing and engagement messaging.</description>
    <label>Areas of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting &amp; Auditing</fullName>
            </value>
            <value>
                <fullName>Anti-Bribery</fullName>
            </value>
            <value>
                <fullName>Boards &amp; Shareholders</fullName>
            </value>
            <value>
                <fullName>Ethics &amp; Codes</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Internal Controls</fullName>
            </value>
            <value>
                <fullName>Privacy</fullName>
            </value>
            <value>
                <fullName>Regulatory Enforcement</fullName>
            </value>
            <value>
                <fullName>Risk Management</fullName>
            </value>
            <value>
                <fullName>Rules &amp; Proposals</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>