unpackaged/main/default/objects/Contact/fields/Bad_Address__c.field-meta.xml
<CustomField>
    <fullName>Bad_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if mailer is returned "Unable to Forward."</description>
    <label>Bad Address?</label>
    <type>Checkbox</type>
</CustomField>