unpackaged/main/default/objects/Contact/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <label>Billing Contact</label>
    <length>80</length>
    <type>Text</type>
</CustomField>