unpackaged/main/default/objects/Contact/fields/CATEGORIES__c.field-meta.xml
<CustomField>
    <fullName>CATEGORIES__c</fullName>
    <label>Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Agency Contact</fullName>
            </value>
            <value>
                <fullName>AML</fullName>
            </value>
            <value>
                <fullName>Artificial Intelligence</fullName>
            </value>
            <value>
                <fullName>ASIA</fullName>
            </value>
            <value>
                <fullName>Board/Governance</fullName>
            </value>
            <value>
                <fullName>Cloud Computing</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Conflict Minerals</fullName>
            </value>
            <value>
                <fullName>Consulting - Advisory</fullName>
            </value>
            <value>
                <fullName>Controls Monitoring</fullName>
            </value>
            <value>
                <fullName>Doug</fullName>
            </value>
            <value>
                <fullName>eDiscovery</fullName>
            </value>
            <value>
                <fullName>ERM</fullName>
            </value>
            <value>
                <fullName>Ethics</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Executive Compensation</fullName>
            </value>
            <value>
                <fullName>Executive Education</fullName>
            </value>
            <value>
                <fullName>FCPA</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>IFRS</fullName>
            </value>
            <value>
                <fullName>International Mktg</fullName>
            </value>
            <value>
                <fullName>Internet of Things</fullName>
            </value>
            <value>
                <fullName>IT Compliance</fullName>
            </value>
            <value>
                <fullName>Law Firm</fullName>
            </value>
            <value>
                <fullName>Marketing - Consulting</fullName>
            </value>
            <value>
                <fullName>Marketing - Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>