unpackaged/main/default/objects/Contact/fields/Comp__c.field-meta.xml
<CustomField>
    <fullName>Comp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the contact have a complimentary subscription?</description>
    <label>Complimentary?</label>
    <type>Checkbox</type>
</CustomField>