unpackaged/main/default/objects/Contact/fields/contactIDdupe__c.field-meta.xml
<CustomField>
    <fullName>contactIDdupe__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFcontactID</label>
    <type>Text</type>
</CustomField>