unpackaged/main/default/objects/Contact/fields/Converted_From_Trial__c.field-meta.xml
<CustomField>
    <fullName>Converted_From_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted From Trial</label>
    <type>Checkbox</type>
</CustomField>