unpackaged/main/default/objects/Contact/fields/Created_By_Website__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by the Event Manager to cull bogus insertUsers.</description>
    <label>Created by Website</label>
    <type>Checkbox</type>
</CustomField>