unpackaged/main/default/objects/Contact/fields/Data_Quality_Description__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Description__c</fullName>
    <formula>IF( Data_Quality_Score__c =100,"All Contact Details Captured", "Missing: "&amp;IF( LEN( Phone ) = 0, "Phone, ","")&amp;""&amp;IF(LEN( Email) = 0, "Email, ","")&amp;""&amp;IF( LEN( MailingStreet ) = 0, "Complete Address, ","")&amp;""&amp;IF( LEN(Title) = 0, "Job Title, ","")&amp;""&amp;IF( ISPICKVAL( Salutation,""), "Salutation",""))</formula>
    <label>Data Quality Description</label>
    <type>Text</type>
</CustomField>