unpackaged/main/default/objects/Contact/fields/Data_Rearch_Tier__c.field-meta.xml
<CustomField>
    <fullName>Data_Rearch_Tier__c</fullName>
    <description>Likelihood of ordering.</description>
    <label>Data Resarch Tier</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>