unpackaged/main/default/objects/Contact/fields/Deliverability__c.field-meta.xml
<CustomField>
    <fullName>Deliverability__c</fullName>
    <description>Pick list | "Active" ; "Undeliverable" ; "Unsubscribed" from Silverpop.</description>
    <label>Deliverability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
            <value>
                <fullName>Undeliverable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>