unpackaged/main/default/objects/Contact/fields/Email_Valid__c.field-meta.xml
<CustomField>
    <fullName>Email_Valid__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Email Valid</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>