unpackaged/main/default/objects/Contact/fields/eNews_Financial_Services__c.field-meta.xml
<CustomField>
    <fullName>eNews_Financial_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eNews Financial Services</label>
    <type>Checkbox</type>
</CustomField>