unpackaged/main/default/objects/Contact/fields/Expiration_Date_Lead_Convert__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_Lead_Convert__c</fullName>
    <label>Expiration Date (Lead Convert)</label>
    <type>Date</type>
</CustomField>