unpackaged/main/default/objects/Contact/fields/GDPR_Country__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Country__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this country comply with GDPR?</inlineHelpText>
    <label>GDPR Country?</label>
    <type>Checkbox</type>
</CustomField>