unpackaged/main/default/objects/Contact/fields/Legacy_SalesforceID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SalesforceID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy SalesforceID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>