unpackaged/main/default/objects/Contact/fields/Mktg_Do_Not_Mail__c.field-meta.xml
<CustomField>
    <fullName>Mktg_Do_Not_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that denotes whether the user has asked to be removed from our mailing list.</description>
    <inlineHelpText>✓ = Remove from Mailing List</inlineHelpText>
    <label>Mktg | Do Not Mail</label>
    <type>Checkbox</type>
</CustomField>