unpackaged/main/default/objects/Contact/fields/Non_Renewal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Non_Renewal_Reason__c</fullName>
    <label>Renewal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreed to Renew</fullName>
            </value>
            <value>
                <fullName>Negotiating</fullName>
            </value>
            <value>
                <fullName>No Response Yet</fullName>
            </value>
            <value>
                <fullName>Budget (Too Expensive)</fullName>
            </value>
            <value>
                <fullName>Changed Positions, CW No Longer Relevant</fullName>
            </value>
            <value>
                <fullName>Get Information Elsewhere</fullName>
            </value>
            <value>
                <fullName>No Longer At Company</fullName>
            </value>
            <value>
                <fullName>No Reason Given</fullName>
            </value>
            <value>
                <fullName>No Time To Read/Use</fullName>
            </value>
            <value>
                <fullName>Not Valuable</fullName>
            </value>
            <value>
                <fullName>Upgraded To Multi</fullName>
            </value>
            <value>
                <fullName>Company Went Private</fullName>
            </value>
            <value>
                <fullName>Company out of Business</fullName>
            </value>
            <value>
                <fullName>Renewed as Single</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>