unpackaged/main/default/objects/Contact/fields/Old_Ad_Sales_Org_Contact__c.field-meta.xml
<CustomField>
    <fullName>Old_Ad_Sales_Org_Contact__c</fullName>
    <formula>IF(ISBLANK(Legacy_SalesforceID__c), FALSE, TRUE)</formula>
    <label>Old Ad Sales Org Contact?</label>
    <type>Checkbox</type>
</CustomField>