unpackaged/main/default/objects/Contact/fields/Original_Source__c.field-meta.xml
<CustomField>
    <fullName>Original_Source__c</fullName>
    <description>Old sources for contact data</description>
    <label>Original Source</label>
    <length>200</length>
    <type>Text</type>
</CustomField>