unpackaged/main/default/objects/Contact/fields/Previous_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Exp_Date__c</fullName>
    <label>Previous Exp. Date</label>
    <type>Date</type>
</CustomField>