unpackaged/main/default/objects/Contact/fields/Print_Circ_Added__c.field-meta.xml
<CustomField>
    <fullName>Print_Circ_Added__c</fullName>
    <label>Added</label>
    <type>Date</type>
</CustomField>