unpackaged/main/default/objects/Contact/fields/Qualification_Source__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Source__c</fullName>
    <label>Qualification Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal Direct Request</fullName>
            </value>
            <value>
                <fullName>Direct Request From Company (Member of Multi)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paid Subscription</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Profile Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>