unpackaged/main/default/objects/Contact/fields/Remove_From_Sales_Lead_Reports__c.field-meta.xml
<CustomField>
    <fullName>Remove_From_Sales_Lead_Reports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove From Sales Lead Reports</label>
    <type>Checkbox</type>
</CustomField>