unpackaged/main/default/objects/Contact/fields/Send_Email_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Keep tabs on the compliance, risk, and ethics content that matters most to you.</description>
    <label>Weekly Digest</label>
    <type>Checkbox</type>
</CustomField>