unpackaged/main/default/objects/Contact/fields/Send_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Send_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Party | Active</label>
    <type>Checkbox</type>
</CustomField>