unpackaged/main/default/objects/Contact/fields/Send_Print_Magazine__c.field-meta.xml
<CustomField>
    <fullName>Send_Print_Magazine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Print Magazine</label>
    <type>Checkbox</type>
</CustomField>