unpackaged/main/default/objects/Contact/fields/Send_Whitepaper_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Send_Whitepaper_of_the_Week__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Featured white papers, e-books, and events brought to you by partner companies.</description>
    <label>Thought Leadership</label>
    <type>Checkbox</type>
</CustomField>