unpackaged/main/default/objects/Contact/fields/Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Source_URL__c</fullName>
    <description>URL of source document qualifying the source</description>
    <label>Source URL</label>
    <type>Url</type>
</CustomField>