unpackaged/main/default/objects/Contact/fields/Status_ACTUAL__c.field-meta.xml
<CustomField>
    <fullName>Status_ACTUAL__c</fullName>
    <description>Old Rule: IF( Expiration_Date__c &gt;=TODAY(),"Active","Expired")

For synch with EML, we need to change to this: 

IF(    Expiration_Date__c &lt;TODAY(),
        "Expired",
        IF(     Email_Subscription_State__c = "", 
                  "Active", 
                 Email_Subscription_State__c
        )
)</description>
    <formula>IF( Expiration_Date__c &gt;=TODAY(),"Active","Expired")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status (ACTUAL)</label>
    <type>Text</type>
</CustomField>