unpackaged/main/default/objects/Contact/fields/Temp__c.field-meta.xml
<CustomField>
    <fullName>Temp__c</fullName>
    <description>Captures conference attendance.</description>
    <label>Temp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CW16</fullName>
            </value>
            <value>
                <fullName>CW15</fullName>
            </value>
            <value>
                <fullName>CWE16</fullName>
            </value>
            <value>
                <fullName>CWE15</fullName>
            </value>
            <value>
                <fullName>CW13</fullName>
            </value>
            <value>
                <fullName>CW14</fullName>
            </value>
            <value>
                <fullName>CWE13</fullName>
            </value>
            <value>
                <fullName>CWE14</fullName>
            </value>
            <value>
                <fullName>TL</fullName>
            </value>
            <value>
                <fullName>GDPR_G</fullName>
            </value>
            <value>
                <fullName>GDPR_W2</fullName>
            </value>
            <value>
                <fullName>GDPR_GW1</fullName>
            </value>
            <value>
                <fullName>GDPR_GEW1</fullName>
            </value>
            <value>
                <fullName>GDPR_W1</fullName>
            </value>
            <value>
                <fullName>GDPR_E</fullName>
            </value>
            <value>
                <fullName>GDPR_W1W2</fullName>
            </value>
            <value>
                <fullName>GDPR_S</fullName>
            </value>
            <value>
                <fullName>GDPR_SE</fullName>
            </value>
            <value>
                <fullName>GDPR_EW1</fullName>
            </value>
            <value>
                <fullName>GDPR_GEW2</fullName>
            </value>
            <value>
                <fullName>GDPR_GE</fullName>
            </value>
            <value>
                <fullName>GDPR_SW2</fullName>
            </value>
            <value>
                <fullName>GDPR_EW2</fullName>
            </value>
            <value>
                <fullName>GDPR_EW1W2</fullName>
            </value>
            <value>
                <fullName>GDPR_SG</fullName>
            </value>
            <value>
                <fullName>GDPR_SGE</fullName>
            </value>
            <value>
                <fullName>GDPR_GW2</fullName>
            </value>
            <value>
                <fullName>GDPR_SGEW1W2</fullName>
            </value>
            <value>
                <fullName>GDPR_SGEW1</fullName>
            </value>
            <value>
                <fullName>GDPR_SW1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>