unpackaged/main/default/objects/Contact/fields/Title_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Title_Keywords__c</fullName>
    <label>Title Keywords</label>
    <length>120</length>
    <type>Text</type>
</CustomField>