unpackaged/main/default/objects/Contact/fields/User_Entered_Org__c.field-meta.xml
<CustomField>
    <fullName>User_Entered_Org__c</fullName>
    <description>The name users enter when they sign up for trials or subscriptions online. This is used to add contacts to existing Organizations to avoid duplicates. If no matching existing Org, the add a new Org.</description>
    <label>User Entered Org</label>
    <length>120</length>
    <type>Text</type>
</CustomField>