unpackaged/main/default/objects/Contact/recordTypes/PaidSubscriber.recordType-meta.xml
<RecordType>
    <fullName>PaidSubscriber</fullName>
    <active>true</active>
    <description>Record for paying subscriber</description>
    <label>Paid Subscriber</label>
</RecordType>