unpackaged/main/default/objects/Contact/validationRules/Mailing_Country_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Mailing_Country_Check</fullName>
    <active>false</active>
    <errorConditionFormula>MailingCountry  =  ""</errorConditionFormula>
    <errorMessage>The Mailing Country field is blank.</errorMessage>
</ValidationRule>