unpackaged/main/default/objects/Contact/listViews/ActivePaidSubscribers.listView-meta.xml
<ListView>
    <fullName>ActivePaidSubscribers</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>User_Type__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Type__c</field>
        <operation>equals</operation>
        <value>Member of Multi,Multi,Single</value>
    </filters>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CONTACT.ADDRESS2_STATE_CODE</field>
        <operation>equals</operation>
        <value>CA</value>
    </filters>
    <label>Active Paid Subscribers - CA</label>
</ListView>