unpackaged/main/default/objects/Contact/listViews/Ben_s_Call_List_Past_CWE_Attendees.listView-meta.xml
<ListView>
    <fullName>Ben_s_Call_List_Past_CWE_Attendees</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>Engagement_Priority_Score__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Ben's Call List - Past CWE Attendees</label>
    <sharedTo>
        <role>Director_of_Subscription_Sales</role>
        <role>Event_Sales</role>
        <role>Salesforce_Administrator</role>
    </sharedTo>
</ListView>