unpackaged/main/default/objects/Contact/listViews/Boston_Meet_up_Invite_June_2018.listView-meta.xml
<ListView>
    <fullName>Boston_Meet_up_Invite_June_2018</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.ADDRESS2_STATE</field>
        <operation>contains</operation>
        <value>MA</value>
    </filters>
    <label>Boston Meet-up Invite - June 2018</label>
</ListView>